@@ -3,8 +3,9 @@ Revision history for Perl extension JavaScript::QuickJS:
 0.15
 - QuickJS memory-management parameters are now configurable.
 - Compilers that don’t implement int128 now have BigInt et al.
-- Docs improvement for memory-leak notifications. (Thank you, perlancar!)
 - QuickJS runtime info is now set to the module name. (Debugging aid.)
+- Docs improvement for memory-leak notifications. (Thank you, perlancar!)
+- Docs now demonstrate use of `std` module, and a test is added.
 
 0.14 Sun 4 Sep 2022
 - Fix parallel build errors. (Thank you, CPAN Testers!)
